--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,68 +1,15 @@
-// Mixin
-@mixin button ($padding, $margin) {
-    position: relative;
-    z-index: 0;
-    text-decoration: none;
-    background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    padding: $padding;
-    //margin: 15px;
-    margin: $margin;
-
-    .button-text {
-        position: relative;
-        z-index: 2;
-        color: white;
-        font-size: 16px;
-        font-weight: 500;
-    }
-
-    &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        opacity: 0;
-        z-index: -1;
-        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0deg, $main-color -5.2%, $secondary-color 110.74%);
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
-        border-radius: 25px;
-        transition: opacity 500ms;
-    }
-
-    &:hover {
-        &::after {
-            opacity: 1;
-            z-index: 1;
-        }
-    }
-}
-
-
-
-// Imports
+// Import
 @import "loader";
+@import "header";
+@import "footer";
+@import "button";
+@import "heart";
 @import "page-accueil";
 @import "page-restaurant";
 
 
-
-// Variables
-$main-color: #9356DC;
-$secondary-color: #FF79DA;
-$tertiary-color: #99E2D0;
-
+// Color
 $body-background-color: #F7F7F7;
-$main-title-color: #101010;
-$dark-grey-color: #353535;
-$location-background-color: #EAEAEA;
-$main-icon-color: #7E7E7E;
-$new-label-color: #008766;
-$new-label-background-color: #99E2D0;
-
 
 
 // General
@@ -75,125 +22,3 @@ body {
     background-color: $body-background-color;
     position: relative;
 }
-
-.title {
-    font-size: 24px;
-    font-weight: 700;
-
-    &--presentation {
-        padding: 0 50px;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            font-size: 40px;
-            padding-bottom : 17px;
-        }
-    }
-
-    &--section {
-        padding: 50px 20px 20px 20px;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            padding: 30px 20px 30px 20px;
-        }
-    }
-}
-
-
-
-// Header
-.header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    background-color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
-    padding: 20px 0 10px 0;
-    margin-bottom: 4px;
-
-    &__logo {
-        width: 162px;
-        height: auto;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            width: 200px;
-        }
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        padding: 30px 0;
-        margin: 0;
-        box-shadow: none;
-    }
-}
-
-
-
-// Footer
-.footer {
-    display: flex;
-    flex-direction: column;
-    background-color: $dark-grey-color;
-    color: white;
-    padding: 20px 25px;
-    gap: 15px;
-
-    &__title {
-        font-family: 'Shrikhand', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
-    }
-    
-    &__contener {
-        display: flex;
-        flex-direction: column;
-        font-size: 16px;
-        gap: 10px;
-
-        &__icon-links {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-weight: 500;
-        }
-
-        &__links {
-            font-weight: 400;
-
-            // Desktop devices
-            @media (min-width: 769px) {
-                padding: 0 10px 0 35px;
-            }            
-        }
-        
-        &__contact {
-            text-decoration: none;
-            color: white;
-        }
-
-        // Desktop devices
-        @media (min-width: 769px) {
-        flex-direction: row;
-        align-items: center;
-        }
-    }
-    
-    &__icon {
-        width: 15px;
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        flex-direction: row-reverse;
-        padding: 60px 70px 30px 25px;
-        gap: 90px;
-    }
-}
-
-
-
