--- a/sass/heart.scss
+++ b/sass/heart.scss
@@ -38,9 +38,14 @@ $secondary-color: #FF79DA;
         opacity: 0;
         padding-top: 18px;
         cursor: pointer;
-        color: transparent;
         background-image: linear-gradient(180deg, $main-color 10%, $secondary-color 70%);
         background-clip: text;
+        color: transparent;
+
+        // Chrome compatibility
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
         transition: opacity 600ms;
     }
 
